2022-10-104 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 6.1.1

2022-10-03 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Avoid overwriting BE users custom permissions (thanks to Mario Lubenka)

2022-09-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve exception handling in case of missing configuration, resolves #242
	* Clean up usage of ObjectManager, resolves #252
	* Release version 6.1.0

2022-08-31 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve and restructure documentation, resolves #215

2022-08-30 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Skip import of records with no reference uid, resolves #241

2022-08-21 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Remove handling of time zone in date transformation user function, resolves #226

2022-08-19 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Allow specific field configuration when using useColumnIndex, resolves #219

2022-08-18 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve base64 image tranformation with automatic format detection, resolves #250

2022-08-16 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Add event for manipulating substructures, resolves #235

2022-08-15 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 6.0.4

2022-08-14 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Delete children records when none is present in import data, resolves #232
	* Ensure strict typing when reading TCE log, resolves #246 (thanks to Timo Webler)
	* Fix handling of "enforcePid" flag, resolves #249

2022-07-21 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix DBAL compatibility issue (thanks to Regis Tedone)

2022-05-13 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve documentation (thanks to Lina Wolf)

2021-12-17 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix path to Datatables library, resolves #225 (thanks to Oliver Hader)