@@ -1,4 +1,3 @@
-# Configuration/Services.yaml
 services:
   _defaults:
     autowire: true
@@ -32,6 +31,10 @@ services:
     shared: false
 
   Cobweb\ExternalImport\Handler\ArrayHandler:
+    public: true
+    shared: false
+
+  Cobweb\ExternalImport\Handler\XmlHandler:
     public: true
     shared: false
 
